1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (SWARM_EXTRA_DIST): Add
	swarm/NonUniqueMethodSignatureException.java and
	swarm/SignatureNotFoundException.java.

1999-03-21  Marcus G. Daniels  <mgd@chimayo.santafe.edu>

	* javaswarm: Add . to front of -classpath and $CLASSPATH to end.

1999-03-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* javaswarm: Pass -classpath for swarm.jar.  Use $jdkdir/bin/java;
	don't home that the PATH has something reasonable.  Set JAVA_HOME
	for java and pass $jdkdir/lib/classes.zip along with swarm.jar.

	* java-stub.el (java-print-method): Denote factory methods with
	static.
	(create-method-p): New method.
	(included-method-p): Use it; exclude +create* methods when
	protocol is not creatable.  Add protocol argument.
	(java-print-interface-methods-in-phase): Exclude factory methods
	as interfaces don't allow static modifier.
	(creatable-p): Renamed from CREATABLE-p.
	(java-print-method-invocation): Take protocol and method as
	arguments.  Handle factory methods.
	(java-print-native-method): Handle static method arguments and
	+create* methods in particular.
	(java-print-native-class): Don't check methods with
	included-method-p.
	(java-argument-print-conversion, java-print-method-invocation):
	Pass JNIEnv to JFINDOBJC.
	(java-print-native-method): Pass JNIEnv to JUPDATE and
	JSWITCHUPDATE.
	(java-print-makefiles): Print simply the module name; don't use
	computed variable name to get modulePROTOCOLS; it is now done in
	Makefile.rules.

1999-03-19  Vladimir Jojic  <vjojic@wupatki.santafe.edu>

	* java-stub.el (java-print-class-phase): Make all classes
	public.

1999-03-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (expanded-method-list): Renamed from method-list.
	(java-print-class-methods-in-phase, java-print-native-class): 
	Accommodate.
	(java-print-native-method): Use JSWITCHUPDATE / JINSTANTIATE of
	user-phase class for createEnd.
